--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,5 @@ log = "0.4"
 serde= { version="1", features=["derive"] }
 sqlx = { version="0.3", features=["postgres", "chrono", "uuid", "tls"] }
 dotenv = { version="0.9", optional=true }
+chrono = { version="*", features=["serde"] }
 pretty_env_logger = "0.4"
